@@ -3,6 +3,7 @@
 namespace Drupal\cloud_server_template\Plugin;
 
 use Drupal\Component\Plugin\PluginManagerInterface;
+use Drupal\cloud_server_template\Entity\CloudServerTemplateInterface;
 
 /**
  * Defines an interface for cloud_server_template_plugin managers.
@@ -11,10 +12,19 @@ interface CloudServerTemplatePluginManagerInterface extends PluginManagerInterfa
 
   /**
    * Load a plugin using the cloud_context
+   *
    * @param $cloud_context
    * @return
    *  loaded CloudServerTemplatePlugin
    */
   public function loadPluginVariant($cloud_context);
+
+  /**
+   * Launch a cloud server template
+   *
+   * @param \Drupal\cloud_server_template\Entity\CloudServerTemplateInterface $cloud_server_template
+   * @return mixed
+   */
+  public function launch(CloudServerTemplateInterface $cloud_server_template);
 
 }
